# master_thesis_code

./: README.md
implementation/: bootstrap.py  comparing_fss_minhash_preciseness.py  config.toml  data_cleaning.py  helper.py  max_alpha_table.py  model_words_jaccard_stats.py  optimize_parameters.py  plotting.py  requirements.txt  seeds.py  seeds.txt  theoretical_improvent_amplified.py
implementation/datasketch_niels/datasketch/: __init__.py  fill_sketch.py  hashfunc.py  lsh.py  lsh_amplified.py  mixed_tab.py  mixed_tabulation.py  notes  parameter_config.json  pyMixedTabulation.cp310-win_amd64.pyd
implementation/mixed_tab_python_bindings/: CMakeLists.txt  ReadMe.md  main.cpp
implementation/results/: bootstrap_25_n_1024.xlsx  bootstrap_25_n_128.xlsx  bootstrap_25_n_256.xlsx  bootstrap_25_n_32.xlsx  bootstrap_25_n_512.xlsx  bootstrap_25_n_64.xlsx  minhash_vs_fss_preciseness.xlsx  parameter_config.json
